--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,15 @@ certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
-colorama==0.4.4
 cycler==0.10.0
-decorator==4.4.2
+decorator==5.0.5
 defusedxml==0.7.1
 entrypoints==0.3
-gitdb==4.0.6
+gitdb==4.0.7
 GitPython==3.1.14
-gunicorn==20.1.0
 idna==2.10
-ipykernel==5.5.0
-ipython==7.21.0
+ipykernel==5.5.3
+ipython==7.22.0
 ipython-genutils==0.2.0
 ipywidgets==7.6.3
 jedi==0.18.0
@@ -34,23 +32,25 @@ jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.0
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
-matplotlib==3.4.0
+matplotlib==3.4.1
 mistune==0.8.4
 nbclient==0.5.3
 nbconvert==6.0.7
-nbformat==5.1.2
+nbformat==5.1.3
 nest-asyncio==1.5.1
 notebook==6.3.0
-numpy==1.20.1
+numpy==1.20.2
 packaging==20.9
 pandas==1.2.3
 pandocfilters==1.4.3
-parso==0.8.1
+parso==0.8.2
+pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==8.1.2
-prometheus-client==0.9.0
+Pillow==8.2.0
+prometheus-client==0.10.0
 prompt-toolkit==3.0.18
-protobuf==3.15.6
+protobuf==3.15.7
+ptyprocess==0.7.0
 pyarrow==3.0.0
 pycparser==2.20
 pydeck==0.6.1
@@ -59,15 +59,13 @@ pyparsing==2.4.7
 pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2021.1
-pywin32==300
-pywinpty==0.5.7
 pyzmq==22.0.3
 requests==2.25.1
 Send2Trash==1.5.0
 six==1.15.0
-smmap==3.0.5
+smmap==4.0.0
 streamlit==0.79.0
-terminado==0.9.3
+terminado==0.9.4
 testpath==0.4.4
 toml==0.10.2
 toolz==0.11.1
